# manim-voiceover

./: .gitignore  .readthedocs.yml  CODEOWNERS  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: -installation-issue.md  feature_request.md  manim-voiceover-bug.md
.github/workflows/: build.yml  python-publish.yml
docs/: requirements.txt  rtd-requirements.txt
docs/source/: api.rst  conf.py  examples.rst  index.rst  installation.rst  quickstart.rst  robots.txt  services.rst  translate.rst
docs/source/_templates/: base.html  page.html
examples/: approximating-tau.py  azure-example.py  bookmark-example.py  coqui-example.py  elevenlabs-example.py  gradio-example.py  gtts-example.py  koko_example.py  openai-example.py  openaitts-example.py  pyttsx3-example.py  quadratic-formula-arabic.py  recorder-example.py  translation-example.py  voiceover-demo.py
examples/locale/vi/LC_MESSAGES/: translation-example.po
examples/translation-example/: render.sh  translation-example.py
examples/translation-example/locale/: translation-example.pot
examples/translation-example/locale/de/LC_MESSAGES/: translation-example.mo  translation-example.po
examples/translation-example/locale/vi/LC_MESSAGES/: translation-example.mo
manim_voiceover/: __init__.py  defaults.py  helper.py  modify_audio.py  render_translations.py  speech_synthesizer.py  tracker.py  translate.py  voiceover_scene.py
manim_voiceover/interfaces/: __init__.py  azure.py  gtts.py  pyttsx3.py  recording_mapper.py
manim_voiceover/services/: __init__.py  azure.py  base.py  coqui.py  edge.py  eleven_labs.py  elevenlabs.py  gradio.py  gtts.py  koko.py  openai.py  openaitts.py  pyttsx3.py  recorder.py  stitcher.py
manim_voiceover/services/coqui/: __init__.py  synthesis.py  synthesize.py  synthesizer.py  utils_synthesizer.py
manim_voiceover/services/recorder/: __init__.py  rkey_listener.py  utility.py
manim_voiceover/translate/: __init__.py  gettext_utils.py  render.py  translate.py
notebooks/: GradioRecordingExample.ipynb
tests/: test_install.py
