[tool.poetry]
name = "manim-voiceover"
version = "0.1.1"
description = "Manim plugin for all things voiceover"
authors = ["The Manim Community Developers <contact@manim.community>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "manim_voiceover" }]
repository = "https://github.com/ManimCommunity/manim-voiceover"
keywords = [
    "text-to-speech",
    "tts",
    "voiceover",
    "manim",
    "recording",
    "speech synthesis",
    "math animations",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Sound/Audio :: Capture/Recording",
    "Topic :: Multimedia :: Sound/Audio :: Sound Synthesis",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Visualization",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Natural Language :: English",
]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
manim = "^0.16.0.post0"
sox = "^1.4.1"
python-dotenv = "^0.21.0"
mutagen = "^1.46.0"
pydub = "^0.25.1"

[tool.poetry.extras]
azure = ["azure-cognitiveservices-speech==^1.24.0"]
gtts = ["gTTS==^2.2.4"]
pyttsx3 = ["pyttsx3==^2.90"]

[tool.poetry.group.dev.dependencies]
Pygments = "^2.13.0"

[tool.poetry.plugins."manim.plugins"]
"manim_voiceover" = "manim_voiceover"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
